--- a/css/index.css
+++ b/css/index.css
@@ -112,8 +112,8 @@ a{
 }
 .bottom .Gophers{
   position: absolute;
-  bottom: 8%;
-  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
   width: 100%;
   height: 400px;
   /* background: yellow; */
